Forge updated to 1.19-41.1.0.